# AutoMuteUs-Portable

./: .env.example  .gitignore  App.xaml  App.xaml.cs  AutoMuteUs Portable.sln  AutoMuteUs-Portable.csproj  AutoMuteUs-Portable.sln  AutoMuteUsPortable.sln  Cargo.toml  ChooseEnvPathWindow.xaml  ChooseEnvPathWindow.xaml.cs  LICENSE  LocalizationProvider.cs  Main.cs  MainWindow.xaml  MainWindow.xaml.cs  Properties.Settings.cs  README.md  README_ja.md  ResetWindow.xaml  ResetWindow.xaml.cs  RichTextBoxTarget.cs  STATask.cs  Settings.cs  SettingsProvider.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  automuteus.list  build.bat  dotnet-releaser.toml  galactus.list  initdb.bat  run.bat  rvc.json  v4.diffenvs.json  v4.env  v6.diffenvs.json  v6.env  v7.diffenvs.json  v7.env  (+1 more)
.github/workflows/: release-v1.yaml  release-v1.yml  releaser-v2.yml
AutoMuteUs Portable/: AutoMuteUs Portable.csproj  Program.cs  Roots.xml
AutoMuteUs Portable.Core/: AutoMuteUs Portable.Core.csproj
AutoMuteUs Portable.PocketBaseClient/: AutoMuteUsPortableApplication.cs  PocketBaseClientApplication.cs  pbcodegen.json
AutoMuteUs Portable.PocketBaseClient/Models/: AppUpdator.Filters.cs  AppUpdator.cs  Application.CompatibleExecutorsList.cs  Application.Filters.cs  Application.cs  Automuteus.CompatibleExecutorsList.cs  Automuteus.Filters.cs  Automuteus.cs  CollectionAppUpdators.cs  CollectionApplications.cs  CollectionAutomuteuses.cs  CollectionExecutors.cs  CollectionGalactuses.cs  CollectionPostgresqls.cs  CollectionRedises.cs  Executor.Filters.cs  Executor.TypeEnum.cs  Executor.cs  Galactus.CompatibleExecutorsList.cs  Galactus.Filters.cs  Galactus.cs  Postgresql.CompatibleExecutorsList.cs  Postgresql.Filters.cs  Postgresql.cs  Redis.CompatibleExecutorsList.cs  Redis.Filters.cs  Redis.cs
AutoMuteUs Portable.PocketBaseClient/Services/: AutoMuteUsPortableDataService.cs
AutoMuteUs Portable.Shared/: AutoMuteUs Portable.Shared.csproj
AutoMuteUs Portable.Shared/Utility/: CustomJsonSerializerOptions.cs  Hashes.cs  HttpClientProgressExtensions.cs  ListValidator.cs  NullableValidator.cs  Validation.cs  ZipFileProgressExtensions.cs
AutoMuteUs Portable.UI.Main/: App.axaml  App.axaml.cs  AutoMuteUs Portable.UI.Main.csproj  Roots.xml  ViewLocator.cs
AutoMuteUs Portable.UI.Main/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
AutoMuteUs Portable.UI.Main/Views/: MainWindow.axaml  MainWindow.axaml.cs
AutoMuteUsPortable/: App.axaml  App.axaml.cs  AutoMuteUsPortable.csproj  Program.cs  Roots.xml  ViewLocator.cs
AutoMuteUsPortable.Core/: AutoMuteUsPortable.Core.csproj
AutoMuteUsPortable.PocketBaseClient/: AutoMuteUsPortable.PocketBaseClient.csproj  AutoMuteUsPortableApplication.cs  PocketBaseClientApplication.cs  pbcodegen.json
AutoMuteUsPortable.PocketBaseClient/Models/: AppUpdator.Filters.cs  AppUpdator.Sorts.cs  AppUpdator.cs  Application.CompatibleExecutorsList.cs  Application.Filters.cs  Application.Sorts.cs  Application.cs  Automuteus.CompatibleExecutorsList.cs  Automuteus.Filters.cs  Automuteus.Sorts.cs  Automuteus.cs  Checksum.Filters.cs  Checksum.Sorts.cs  Checksum.cs  CollectionAppUpdator.cs  CollectionApplication.cs  CollectionAutomuteus.cs  CollectionChecksum.cs  CollectionDownloadUrl.cs  CollectionExecutor.cs  CollectionGalactus.cs  CollectionPostgresql.cs  CollectionRedis.cs  DownloadUrl.Filters.cs  DownloadUrl.Sorts.cs  DownloadUrl.cs  Executor.Filters.cs  Executor.Sorts.cs  Executor.TypeEnum.cs  Executor.cs  Galactus.CompatibleExecutorsList.cs  Galactus.Filters.cs  Galactus.Sorts.cs  Galactus.cs  Postgresql.CompatibleExecutorsList.cs  Postgresql.Filters.cs  Postgresql.Sorts.cs  Postgresql.cs  Redis.CompatibleExecutorsList.cs  Redis.Filters.cs  (+2 more)
AutoMuteUsPortable.PocketBaseClient/Services/: AutoMuteUsPortableDataService.cs
AutoMuteUsPortable.Shared/: AutoMuteUsPortable.Shared.csproj
AutoMuteUsPortable.Shared/Utility/: Checksum.cs  CustomJsonSerializerOptions.cs  DownloadAndExtract.cs  Encoder.cs  Hashes.cs  HttpClientProgressExtensions.cs  ListValidator.cs  NullableValidator.cs  ProcessExtensions.cs  Reflection.cs  (+3 more)
AutoMuteUsPortable.UI.Main/: App.axaml  App.axaml.cs  AutoMuteUsPortable.UI.Main.csproj  Program.cs  Resources.axaml  Roots.xml  ViewLocator.cs
AutoMuteUsPortable.UI.Setup/: App.axaml  App.axaml.cs  AutoMuteUsPortable.UI.Setup.csproj  Program.cs  Roots.xml  Styles.axaml  ViewLocator.cs
Properties/: Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings  Strings.Designer.cs  Strings.ja.resx  Strings.resx
apps/component_modules/automuteus/: Cargo.toml
apps/component_modules/automuteus/src/: lib.rs
apps/core/: Cargo.toml
apps/core/src/: daemonize.rs  main.rs  ui_ipc.rs
apps/ui/main/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/main/src-tauri/src/: ipc.rs  main.rs
automuteus/: build.bat  go.mod  go.sum  main.go
galactus/: build.bat  go.mod  go.sum  main.go
wingman/: .dockerignore  Dockerfile  README.md  build.bat  go.mod  go.sum
(+236 files in other folders)
