[package]
name = "amup_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.3"
anyhow = "1.0.77"
busrt = { version = "0.4.8", features = ["full"] }
async-channel = "1.9.0"
clap = { version = "4.4.11", features = ["derive"] }
toml = "0.8.8"
tokio = { version = "1.35.1", features = ["full"] }
fd-lock = "4.0.1"
fork = "0.1.22"
ctrlc = "3.4.2"
log = "0.4.20"
env_logger = "0.10.1"

[dependencies.amup_core_comp_mod_intf]
version = "0.1"
path = "../../libs/core/comp_mod_intf"

[dependencies.amup_core_config_intf]
version = "0.1"
path = "../../libs/core/config_intf"
features = ["users"]

[dependencies.amup_core_ui_ipc_intf]
version = "0.1"
path = "../../libs/core/ui_ipc_intf"

[target.unix.dependencies]
daemonize = "0.5.0"
