[package]
name = "amup_core"
version = "0.1.0"
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = { workspace = true }
anyhow = { workspace = true }
busrt = { workspace = true, features = ["full"] }
async-channel = { workspace = true }
clap = { version = "4.4.11", features = ["derive"] }
toml = "0.8.8"
tokio = { version = "1.35.1", features = ["full"] }
fd-lock = "4.0.1"
fork = "0.1.22"
ctrlc = "3.4.2"
log = { workspace = true }
env_logger = { workspace = true }

[target.unix.dependencies]
daemonize = "0.5.0"

[dependencies.amup_core_comp_mod_intf]
version = "0.1"
path = "../../libs/core/comp_mod_intf"

[dependencies.amup_core_config_intf]
version = "0.1"
path = "../../libs/core/config_intf"
features = ["users"]

[dependencies.amup_core_ui_ipc_intf]
version = "0.1"
path = "../../libs/core/ui_ipc_intf"

