[package]
name = "amup_component_module_automuteus"
version = "0.1.0"
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = { workspace = true }

[dependencies.amup_core_comp_mod_intf]
version = "0.1"
path = "../../../lib/core/comp_mod_intf"

[dependencies.amup_core_config_intf]
version = "0.1"
path = "../../../lib/core/config_intf"

[lib]
name = "automuteus"
crate-type = ["cdylib", "rlib"]
