[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors.workspace = true
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["window-all"] }
busrt = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tokio = { version = "1.35.1", features = ["full"] }
log = { workspace = true }
env_logger = { workspace = true }

[dependencies.amup_core_ui_ipc_intf]
path = "../../../../lib/core/ui_ipc_intf"
version = "0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
